# osgSprite

./: .gitignore  CMakeLists.txt  COPYING  GNUmakefile  README
CMakeModules/: FindChaskii.cmake  FindOSG.cmake  FindOSGSPRITES.cmake  FindOpenThreads.cmake  osgSpritesMacroUtils.cmake
Make/: local_rules.mk
data/: indexsprites.frag  indexsprites.vert  particleprogram-perfrag.frag  particleprogram-perfrag.vert  particleprogram.frag  particleprogram.vert  particlesprites.frag  particlesprites.geom  particlesprites.vert  pointsprites.frag  pointsprites.vert  sprites.frag  sprites.geom  sprites.vert  treesprites.frag  treesprites.geom  upsprites.frag  upsprites.geom  upsprites.vert
examples/: CMakeLists.txt
examples/DotOsg/: CMakeLists.txt  example.osg  fill.cpp
examples/DotSprites/: fill.cpp
examples/Forest/: CMakeLists.txt  main.cpp
examples/GPUParticles/: CMakeLists.txt  ComputeNode.h  DataTexture.h  GPUParticles.h  Utils.h  main.cpp
examples/Program/: CMakeLists.txt  GNUmakefile  main.cpp  sprites.frag  sprites.geom  sprites.vert
examples/Simple/: CMakeLists.txt  main.cpp
examples/test/: 1.trees  example.osg
include/osgSprites/: Export.h  OpenGL.h  Sprites.h  TexturePalette.h
src/: CMakeLists.txt  GNUmakefile
src/Lib/: CMakeLists.txt  GNUmakefile  Sprites.cpp  TexturePalette.cpp
src/Loader/: CMakeLists.txt  GNUmakefile  PositionElement.h  SpriteDataElement.h  SpriteLoader.cpp  SpriteSerDes.cpp  SpriteSerDes.h  SpritesElement.h  TexturePaletteElement.h
src/Plugin/: CMakeLists.txt  GNUmakefile  IO_Sprites.cpp
src/osgSprites/: CMakeLists.txt  Sprites.cpp
src/plugins/: CMakeLists.txt
src/plugins/osgdb_osgsprites/: CMakeLists.txt
